# Psyborg-social

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  seed_admin.py
docker/: api.Dockerfile  entrypoint.sh  nginx.conf  ui.Dockerfile  ui.nginx.conf
docs/: 01_README.md  02_TECH_STACK.md  03_ARCHITECTURE.md  04_DATA_MODELS.md  05_PLATFORM_ADAPTERS.md  06_ANTI_DETECTION.md  07_DSPY_PIPELINES.md  08_MCP_SERVER.md  09_TASK_SCHEDULER.md  10_CONTENT_PIPELINE.md  11_WEB_UI.md  12_DESIGN_PATTERNS.md  13_DEPLOYMENT.md  14_SECURITY.md
migrations/: env.py
migrations/versions/: 38d9e7c08224_initial_schema.py
socialmind/: __init__.py  cli.py  events.py
socialmind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
socialmind/adapters/: base.py  registry.py
socialmind/adapters/facebook/: adapter.py
socialmind/adapters/instagram/: adapter.py
socialmind/adapters/linkedin/: __init__.py  adapter.py
socialmind/adapters/reddit/: adapter.py
socialmind/adapters/threads/: adapter.py
socialmind/adapters/tiktok/: adapter.py
socialmind/adapters/twitter/: adapter.py
socialmind/adapters/youtube/: adapter.py
socialmind/ai/: config.py
socialmind/ai/modules/: content.py
socialmind/ai/optimizers/: optimize_post_generator.py
socialmind/ai/pipelines/: post_pipeline.py
socialmind/ai/signatures/: __init__.py
socialmind/api/: dependencies.py  main.py
socialmind/api/routers/: accounts.py  analytics.py  auth.py  campaigns.py  media.py  personas.py  tasks.py  user.py  websocket.py
socialmind/config/: logging.py  settings.py
socialmind/content/: downloader.py  image.py  image_processor.py  media_store.py  pipeline.py  variation.py  video.py
socialmind/mcp/: app.py  middleware.py  server.py
socialmind/mcp/tools/: account_tools.py  analytics_tools.py  campaign_tools.py  dm_tools.py  engagement_tools.py  post_tools.py  research_tools.py
socialmind/models/: __init__.py  account.py  audit.py  base.py  campaign.py  media.py  persona.py  platform.py  proxy.py  task.py  user.py
socialmind/repositories/: account_repository.py  campaign_repository.py  task_repository.py
socialmind/scheduler/: beat.py  celery_app.py  tasks.py  workflows.py
socialmind/security/: auth.py  encryption.py
socialmind/services/: account_service.py  campaign_service.py  post_service.py  social_service.py
socialmind/session/: __init__.py  redis_session_manager.py
socialmind/stealth/: circuit_breaker.py  fingerprint.py  proxy.py  rate_limiter.py  session.py  timing.py
tests/: conftest.py
tests/test_adapters/: test_base.py  test_facebook.py  test_instagram.py  test_linkedin.py  test_reddit.py  test_threads.py  test_tiktok.py  test_twitter.py  test_youtube.py
tests/test_ai/: test_signatures.py
tests/test_api/: test_accounts.py  test_campaigns.py  test_tasks.py
tests/test_content/: test_image.py
tests/test_mcp/: test_research_tools.py  test_server.py
tests/test_scheduler/: test_tasks.py  test_workflows.py
tests/test_services/: test_account_service.py  test_campaign_service.py
tests/test_session/: test_redis_session_manager.py
tests/test_stealth/: test_rate_limiter.py  test_timing.py
ui/: index.html  package.json  vite.config.ts
ui/src/: routeTree.gen.ts
ui/src/api/: accounts.ts  analytics.ts  campaigns.ts  client.ts  media.ts  personas.ts  tasks.ts  user.ts
ui/src/app/: App.tsx  providers.tsx
ui/src/components/accounts/: AccountStatusBadge.tsx
ui/src/components/campaigns/: CronBuilder.tsx
ui/src/components/tasks/: LiveLogViewer.tsx  TaskStatusBadge.tsx
ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Label.tsx  Select.tsx  Textarea.tsx  index.ts
ui/src/hooks/: useAccounts.ts  useAuth.ts  useLiveLogs.ts  useTasks.ts
ui/src/routes/: _layout.tsx  index.tsx  login.tsx  settings.tsx
ui/src/routes/accounts/: $accountId.tsx  index.tsx  new.tsx
ui/src/routes/analytics/: index.tsx
ui/src/routes/campaigns/: $campaignId.tsx  index.tsx  new.tsx
ui/src/routes/media/: index.tsx
ui/src/routes/personas/: $personaId.tsx  index.tsx
ui/src/routes/tasks/: index.tsx
ui/src/stores/: auth.ts
ui/src/types/: api.ts
