[tool.poetry]
name = "socialmind"
version = "0.1.0"
description = "Autonomous social media management platform powered by AI"
authors = ["SocialMind Team"]
readme = "README.md"
packages = [{ include = "socialmind" }]

[tool.poetry.dependencies]
python = "^3.12"

# AI / LLM
dspy-ai = "^2.0"
litellm = "^1.0"
chromadb = "^0.5"
sentence-transformers = "^3.0"
openai = "^1.0"
anthropic = "^0.25"
ollama = "^0.2"

# Platform adapters
instagrapi = "^2.0"
praw = "^7.0"
asyncpraw = "^7.0"
tweepy = "^4.0"
google-api-python-client = "^2.0"
google-auth-oauthlib = "^1.0"
google-auth-httplib2 = "^0.2"
yt-dlp = "*"
httpx = "^0.27"
curl-cffi = "^0.7"

# Browser automation
playwright = "^1.44"
playwright-stealth = "^1.0"
fake-useragent = "^1.5"

# Web framework
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-multipart = "^0.0.9"

# Auth
python-jose = { extras = ["cryptography"], version = "^3.3" }
passlib = { extras = ["bcrypt"], version = "^1.7" }
cryptography = "^42.0"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
alembic = "^1.13"
asyncpg = "^0.29"
redis = { extras = ["hiredis"], version = "^5.0" }

# Task queue
celery = { extras = ["redis"], version = "^5.4" }
flower = "^2.0"

# MCP
mcp = "^1.0"
sse-starlette = "^2.0"

# Media
Pillow = "^10.0"
ffmpeg-python = "^0.2"
moviepy = "^1.0"

# Stealth
python-socks = "^2.0"
aiohttp-socks = "^0.8"

# Utilities
loguru = "^0.7"
typer = "^0.12"
rich = "^13.0"
python-dotenv = "^1.0"
pyotp = "^2.9"
beautifulsoup4 = "^4.12"
trafilatura = "^1.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.10"
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-playwright = "^0.5"
factory-boy = "^3.3"
pre-commit = "^3.7"

[tool.poetry.scripts]
socialmind = "socialmind.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
